--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section id="about" class="about-section">
             <div class="about-content">
                 <div class="text-content">
-                    <h2>O nas</h2>
+                    <h2>Kim jesteśmy?</h2>
                     <p>Z dziecięcej miłości do zajadania się pierogami mamy, powstała pasja do robienia ich
                         samodzielnie.</p>
                     <p>Mam na imię Wojtek i zapraszam Państwa do spróbowania efektów wielu lat dojrzewania tej pasji,
