--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <section id="menu" class="menu-section">
-            <h2>Aktualna oferta Co z Mąki To z Serca</h2>
+            <h2>Nasza aktualna oferta</h2>
             <div class="menu-list">
                 <div class="menu-item">
                     <span class="dish-name">Pierogi ziemniaczano-serowe (porcja 12 sztuk)</span>
